doc: include java 26 warning in readme